...
    @EnvironmentObject var gatewayClientWrapper: GatewayClientWrapper
    @Environment(\.dismiss) private var dismiss

    var body: some View {
        VStack(spacing: 0) {
            HStack {
                Button("Back") {
                    dismiss()
                }
                .buttonStyle(.borderless)

                Spacer()

...
